# kraken2-server

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  kraken2_client.cc  kseq.cc  kseq.cc.h
cmake/: dependencies.cmake
conda/: build.sh  meta.yaml
protos/: CMakeLists.txt  Kraken2.proto
server/: CMakeLists.txt  classify_server.cc  classify_server.h  kraken2_server.cc  report_server.cc  report_server.h  thread_pool.hpp  thread_pool_light.hpp
testing/: run_server.sh
utils/: CMakeLists.txt
utils/include/: file_reader_into_stream.h  messages.h  sequential_file_reader.h  sequential_file_writer.h  thread_safe_queue.h  utils.h
utils/src/: messages.cc  sequential_file_reader.cc  sequential_file_writer.cc  utils.cc
